Criando cenario de teste para campos obrigatorios

--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7145],[[4,5,6,7,[],[1,54,7066],[],[[8,0,0,[],[1,229,6781],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,7445],[[4,5,6,0,[],[0,45,7391],[[7,8,9,10,[],[0,74,7298],[],[[11,0,0,[],[0,577,6536,12],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*AutoDemoSite","*D:\\Pessoais\\Cursos\\Automation\\Robot\\AutoDemoSite","*..","*Register","*D:\\Pessoais\\Cursos\\Automation\\Robot\\AutoDemoSite\\register.robot","*../register.robot","*<p>Suite de teste com RobotFramework na tela Register\x3c/p>","*Deve acessar a tela Register"]);
+window.output["strings"] = window.output["strings"].concat(["*","*AutoDemoSite","*D:\\Pessoais\\Cursos\\Automation\\Robot\\AutoDemoSite","*..","*Tests","*D:\\Pessoais\\Cursos\\Automation\\Robot\\AutoDemoSite\\tests","*../tests","*Register","*D:\\Pessoais\\Cursos\\Automation\\Robot\\AutoDemoSite\\tests\\register.robot","*../tests/register.robot","*<p>Suite de teste com RobotFramework na tela Register\x3c/p>","*Validar a obrigatoriedade do campo FullName","*Keyword 'Submit register form' expected 3 arguments, got 4."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"AutoDemoSite","name":"AutoDemoSite","pass":1,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"AutoDemoSite.Register","name":"Register","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:07","fail":1,"id":"s1","label":"AutoDemoSite","name":"AutoDemoSite","pass":0,"skip":0},{"elapsed":"00:00:07","fail":1,"id":"s1-s1","label":"AutoDemoSite.Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:07","fail":1,"id":"s1-s1-s1","label":"AutoDemoSite.Tests.Register","name":"Register","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761422854275;
+window.output["baseMillis"] = 1761438934879;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7223;
+window.output["generated"] = 7465;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
